[gd_scene load_steps=20 format=3 uid="uid://dg2noqsa88rfi"]

[ext_resource type="Script" path="res://scenes/game_controller.gd" id="1_l107g"]
[ext_resource type="PackedScene" uid="uid://cs2xi0j22ceuf" path="res://scenes/agents/crab/crab.tscn" id="2_o2yhw"]
[ext_resource type="PackedScene" uid="uid://oximjfbr7s4t" path="res://scenes/agents/fish/fish.tscn" id="3_j3hvc"]
[ext_resource type="PackedScene" uid="uid://h6sqy6mxp4bs" path="res://scenes/agents/seagull/seagull.tscn" id="4_118gt"]
[ext_resource type="PackedScene" uid="uid://06m1oafa5pe1" path="res://scenes/agents/snail/snail.tscn" id="5_4utkq"]
[ext_resource type="Script" path="res://scenes/follow_camera.gd" id="5_hgns2"]
[ext_resource type="PackedScene" uid="uid://bsmupnj06gyi4" path="res://scenes/island/island_devel.tscn" id="6_fxh8w"]
[ext_resource type="PackedScene" uid="uid://mc1bll8wnocb" path="res://scenes/agents/snake/snake.tscn" id="7_cgve1"]
[ext_resource type="Texture2D" uid="uid://dqnr6evjbkugj" path="res://scenes/agents/snake/images/stripe.png" id="8_sxxy8"]
[ext_resource type="Theme" uid="uid://bmaxqtcr7qr86" path="res://scenes/menu/theme.tres" id="9_171ae"]
[ext_resource type="Script" path="res://scenes/shooter.gd" id="9_xxtx0"]
[ext_resource type="PackedScene" uid="uid://0lhhnpqi5g5o" path="res://scenes/agents/bullet/bullet.tscn" id="10_lbw6s"]
[ext_resource type="Shader" path="res://scenes/tint.gdshader" id="10_wty5t"]
[ext_resource type="PackedScene" uid="uid://ug2cgqqtfs3s" path="res://scenes/vfx_2d/vfx_2d.tscn" id="11_ct3rf"]
[ext_resource type="Texture2D" uid="uid://dp8mdx47bqyne" path="res://scenes/shooter_collision.png" id="12_mks1j"]
[ext_resource type="Texture2D" uid="uid://bmrb5on5wu523" path="res://assets/images/water_transparent.png" id="13_eicy6"]
[ext_resource type="Texture2D" uid="uid://dlau5uswek4bd" path="res://assets/images/water.png" id="13_hiaqs"]

[sub_resource type="CanvasTexture" id="CanvasTexture_shtj2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ccadf"]
shader = ExtResource("10_wty5t")
shader_parameter/tint = Vector3(0.3, 0.3, 0.3)

[node name="GameController" type="Node2D" node_paths=PackedStringArray("follow_camera", "terrain", "snake")]
script = ExtResource("1_l107g")
follow_camera = NodePath("FollowCamera")
terrain = NodePath("Island")
snake = NodePath("Snake")
min_health = 0.2
steering_angle = 20.0
steering_angle_maxdiff = 15.0
collect_amount = 300.0
collect_amount_maxdiff = 500.0
wander_power = 600.0
wander_power_maxdiff = 100.0
wander_drain = 2.0
wander_drain_maxdiff = 1.9
sprint_power = 850.0
sprint_power_maxdiff = 150.0
sprint_drain = 3.0
sprint_drain_maxdiff = 2.9
dry_resistance = 700.0
dry_resistance_maxdiff = 300.0
shot_rate = 1.0
shot_rate_maxdiff = 0.9
shot_speed = 2000.0
shot_speed_maxdiff = 1000.0
shot_distance = 1000.0
shot_distance_maxdiff = 1000.0
shot_drain = 10.0
shot_drain_maxdiff = 9.9
part_size = 200.0
part_size_maxdiff = 100.0
part_capacity = 100.0
part_capacity_maxdiff = 200.0
food_bonus = 1.0
food_bonus_maxdiff = 2.0
fish_scene = ExtResource("3_j3hvc")
fish_count_start = 12
fish_spawn_radius = 5300.0
fish_min_radius = 4600.0
fish_max_radius = 5300.0
crab_scene = ExtResource("2_o2yhw")
crab_spawn_radius = 4300.0
crab_min_radius = 3900.0
crab_max_radius = 4400.0
crab_scout_radius = 4500.0
crab_retrieve_radius = 3850.0
seagull_scene = ExtResource("4_118gt")
seagull_count_start = 4
seagull_max_radius = 5500.0
snail_scene = ExtResource("5_4utkq")
snail_spawn_radius = 575.0
snail_arrival_radius = 5000.0

[node name="Island" parent="." instance=ExtResource("6_fxh8w")]

[node name="Snake" parent="." instance=ExtResource("7_cgve1")]
position = Vector2(3500, 0)
grow_scale_add = Vector2(0.02, 0.02)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainerUI" type="VBoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 16)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainerUI"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainerUI"]
layout_mode = 2
alignment = 1

[node name="Spacer0" type="Control" parent="CanvasLayer/VBoxContainerUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container0" type="CenterContainer" parent="CanvasLayer/VBoxContainerUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="TextureProgressBarGrowth" type="TextureProgressBar" parent="CanvasLayer/VBoxContainerUI/HBoxContainer/Container0"]
custom_minimum_size = Vector2(128, 16)
layout_mode = 2
step = 0.01
value = 50.0
nine_patch_stretch = true
texture_under = SubResource("CanvasTexture_shtj2")
texture_progress = ExtResource("8_sxxy8")
tint_under = Color(0.498039, 0.498039, 0.498039, 0.356863)

[node name="Spacer1" type="Control" parent="CanvasLayer/VBoxContainerUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container1" type="CenterContainer" parent="CanvasLayer/VBoxContainerUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 50.0

[node name="TextureProgressBarHealth" type="TextureProgressBar" parent="CanvasLayer/VBoxContainerUI/HBoxContainer/Container1"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
step = 0.01
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("13_eicy6")
texture_progress = ExtResource("13_hiaqs")

[node name="Spacer2" type="Control" parent="CanvasLayer/VBoxContainerUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container2" type="CenterContainer" parent="CanvasLayer/VBoxContainerUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="TextureProgressBarShot" type="TextureProgressBar" parent="CanvasLayer/VBoxContainerUI/HBoxContainer/Container2"]
custom_minimum_size = Vector2(128, 16)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
nine_patch_stretch = true
texture_under = ExtResource("13_eicy6")
texture_progress = ExtResource("13_hiaqs")

[node name="Spacer3" type="Control" parent="CanvasLayer/VBoxContainerUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRectTint" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_ccadf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainerIntro" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_171ae")
alignment = 1

[node name="LabelLevel" type="Label" parent="CanvasLayer/VBoxContainerIntro"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LEVEL 1"
horizontal_alignment = 1

[node name="ControlDescription" type="Control" parent="CanvasLayer/VBoxContainerIntro"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="LabelDescription" type="Label" parent="CanvasLayer/VBoxContainerIntro"]
layout_mode = 2
text = "ACTIVATE THE NEW LIFE-LAKES"
horizontal_alignment = 1

[node name="ControlAnimals" type="Control" parent="CanvasLayer/VBoxContainerIntro"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="LabelAnimals" type="Label" parent="CanvasLayer/VBoxContainerIntro"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "UNLOCKED ANIMALS:"
horizontal_alignment = 1

[node name="ControlAnimal" type="Control" parent="CanvasLayer/VBoxContainerIntro"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="LabelAnimal" type="Label" parent="CanvasLayer/VBoxContainerIntro"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üêü FISH, üê¶ SEAGULL"
horizontal_alignment = 1

[node name="ControlHints" type="Control" parent="CanvasLayer/VBoxContainerIntro"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="LabelHints" type="Label" parent="CanvasLayer/VBoxContainerIntro"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HINTS:"
horizontal_alignment = 1

[node name="ControlHint" type="Control" parent="CanvasLayer/VBoxContainerIntro"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="LabelHint" type="Label" parent="CanvasLayer/VBoxContainerIntro"]
layout_mode = 2
text = "STAY AWAY FROM SALTY WATER AND BARREN TERRAIN."
horizontal_alignment = 1

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(3500, 0)

[node name="FollowCamera" type="Camera2D" parent="."]
zoom = Vector2(0.45, 0.45)
script = ExtResource("5_hgns2")
speed = 10.0

[node name="Shooter" type="Node" parent="."]
script = ExtResource("9_xxtx0")
bullet_scene = ExtResource("10_lbw6s")
bullet_range = 1024.0
spawn_distance = 16.0
collision_vfx_scene = ExtResource("11_ct3rf")
collision_texture = ExtResource("12_mks1j")
